<resources>
    <!-- Status -->
    <string name="status_format">Status: BT %1$s | Device: %2$s | %3$s</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>

    <!-- Bluetooth Controls -->
    <string name="enable_bt">Enable BT</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="bluetooth_already_enabled">Bluetooth already enabled</string>
    <string name="bluetooth_permission_denied">Bluetooth permission denied</string>
    <string name="missing_bluetooth_permission">Missing Bluetooth permission</string>
    <string name="enable_bt_first">Enable Bluetooth first</string>
    <string name="pair_first">Pair your phone with Audib first</string>

    <!-- Connection messages -->
    <string name="connection_failed">Connection failed: %1$s</string>
    <string name="connected_to">Connected to %1$s</string>
    <string name="selected_device">Selected: %1$s</string>
    <string name="no_device_selected">No device selected</string>
    <string name="disconnected">Disconnected</string>

    <!-- Command messages -->
    <string name="sent_command">Sent: %1$s</string>
    <string name="send_failed">Send failed: %1$s</string>
    <string name="not_connected">Not connected</string>

    <!-- Power & Volume -->
    <string name="power">Power</string>
    <string name="vol_up">VOL +</string>
    <string name="vol_down">VOL -</string>
    <string name="mute">Mute</string>

    <!-- Inputs -->
    <string name="in0">IN0</string>
    <string name="in1">IN1</string>
    <string name="in2">IN2</string>
    <string name="in3">IN3</string>
    <string name="in4">IN4</string>
    <string name="prev_in">Prev IN</string>
    <string name="next_in">Next IN</string>

    <!-- Audio Features -->
    <string name="menu">Menu</string>
    <string name="loudness">Loudness</string>
    <string name="surround">Surround</string>
    <string name="three_d">3D</string>
    <string name="tone_bypass">Tone Bypass</string>

    <!-- FM Controls -->
    <string name="fm_up">FM +</string>
    <string name="fm_down">FM -</string>
    <string name="fm_mode">Mode</string>
    <string name="rds">RDS</string>
    <string name="fm_store">Store</string>
    <string name="fm_mono">Mono</string>

    <!-- Numeric Keypad -->
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>

    <!-- System Controls -->
    <string name="time">Time</string>
    <string name="alarm">Alarm</string>
    <string name="timer">Timer</string>
    <string name="bright">Bright</string>
    <string name="display">Display</string>
    <string name="spectrum">Spectrum</string>
    <string name="full_speed">Full Speed</string>
</resources>